--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -48,4 +48,7 @@ html, body {
   text-align: center;
   font-size: 12px;
   margin-top: 10px;
+  position: absolute;
+  left:50%;
+  transform: translateX(-50%);
 }
