--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -77,7 +77,7 @@ select {
 }
 
 .form-title {
-  font-family: $font-monserrat;
+  font-family: $font-montserrat;
   font-size: 20px;
   border-bottom: 1px solid $purple-color;
   padding-bottom: 5px;
@@ -172,5 +172,23 @@ select {
       font-size: 16px;
       padding:8px 10px;
     }
+  }
+}
+
+.page-message {
+  width: 100%;
+  font-family: $font-montserrat;
+  font-size: 36px;
+  margin: 50px 0;
+  text-align: center;
+  box-sizing: border-box;
+  font-weight: bold;
+  a {
+    padding: 15px;
+    width: 80%;
+    display: block;
+    margin: 0 auto;
+    font-size: 20px;
+
   }
 }
