--- a/src/assets/css/views/profile/Profile.scss
+++ b/src/assets/css/views/profile/Profile.scss
@@ -49,6 +49,7 @@
 }
 .Avatar {
   width: 50px;
+  height: 50px;
   margin: 13px;
   border-radius: 50%;
 }
@@ -60,7 +61,43 @@
   font-family: $font-monserrat;
   font-weight: 600;
   background-color: #fff;
-  border: 1px solid $purple-color;
-  border-radius: 10px;
+  border-radius: 5px;
+  border: 0px;
   padding: 5px;
+}
+
+.ButtonUserNot {
+  background-color: $purple-color;
+  color: #fff;
+}
+
+.ReviewUser {
+  display: flex;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+  margin: 0px 10px;
+  width: 87.5%
+}
+
+.ReviewHeader{
+  display: flex;
+  justify-content: space-between;
+}
+
+.ReviewStar {
+  width: 80px;
+  height: 15px;
+}
+
+.ReviewTitle{
+  font-family: $font-monserrat;
+  font-weight: 600;
+  margin-block-start: 0.2em;
+
+}
+
+.ReviewContent {
+  border: 1px solid #E5E5E5;
+  border-radius: 15px;
+  padding: 10px;
 }
