--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -83,6 +83,14 @@ select {
   padding-bottom: 5px;
   margin-bottom: 20px;
   margin-top: 30px;
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: flex-start;
+  img {
+    margin-right: 5px;
+    width: 16px;
+  }
 }
 .form-group {
   display: flex;
