--- a/src/assets/css/components/smallAd.scss
+++ b/src/assets/css/components/smallAd.scss
@@ -13,12 +13,13 @@
   border-radius: 15px;
   .ad-preview {
      width: 100%;
-    height: 75px;
+      height: 80px;
   }
   .ad-data {
     padding: 10px;
+    padding-top: 0;
     width: 100%;
-    height: 75px;
+    height: 70px;
     display: flex;
     flex-flow: column;
     justify-content: space-between;
