--- a/src/assets/css/components/searchBar.scss
+++ b/src/assets/css/components/searchBar.scss
@@ -4,6 +4,7 @@
   padding: 15px 20px;
   display: flex;
   flex-flow: row nowrap;
+  z-index: 100;
   align-items: center;
   justify-content: space-between;
   img {
