--- a/src/assets/css/views/search.scss
+++ b/src/assets/css/views/search.scss
@@ -1,6 +1,102 @@
+@import "../variables";
+
+.search-view {
+  margin-top: -10px;
+  display: block;
+  &.hide {
+    display: none;
+  }
+}
+
+.view-options {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  font-size: 18px;
+  margin-top: 55px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  background: white;
+  width: 100vw;
+  z-index: 100;
+  .view-option {
+    cursor: pointer;
+    font-family: $font-montserrat;
+    margin-right: 15px;
+    &.active {
+      font-weight: bold;
+      color:_$gold-color;
+    }
+  }
+}
 .search-container {
-  padding-top: 80px;
+
   .page-message {
     font-size: 24px;
+  }
+}
+.map {
+  margin-top: 25px;
+  position: relative!important;
+  height: 300px!important;
+  width: 400px!important;
+  overflow: hidden;
+}
+.mapboxgl-map {
+  position: absolute;
+  .mapboxgl-canvas-container {
+    position: absolute;
+    top:0;
+    left: 0;
+    right: 0;
+    bottom:0;
+    canvas {
+      position: absolute;
+    }
+    .mapboxgl-marker {
+      position: absolute!important;
+      stroke : $purple-color;
+      width: 10px;
+      height: 10px;
+      border-radius: 50%;
+      background: $purple-color!important;
+      svg {
+        display: none;
+      }
+      g {
+        fill: $purple-color;
+      }
+    }
+  }
+  .mapboxgl-ctrl-bottom-right {
+    display: none;
+  }
+  .mapboxgl-popup {
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    background: white;
+    border-radius: 15px;
+    padding: 10px;
+    color:black;
+    font-weight: bold;
+    cursor: pointer;
+    font-size: 12px;
+    transition: background-color 0.2s ease-in-out;
+    &:hover {
+      color:white;
+      background: $purple-color;
+      .mapboxgl-popup-close-button {
+      color: white;
+        background: $purple-color;
+      }
+    }
+    .mapboxgl-popup-close-button {
+      border: none;
+      transition: background-color 0.2s ease-in-out;
+      background: white;
+      margin-top: -2px;
+      float: right;
+      font-weight: bold;
+      color:$purple-color;
+    }
   }
 }
