--- a/src/assets/css/views/profile/Profile.scss
+++ b/src/assets/css/views/profile/Profile.scss
@@ -122,8 +122,8 @@
   position: absolute;
   right: 20px;
 }
-.profile-image{
+/**.profile-image{
   position: absolute;
   right: 150px;
   top: 60px;
-}
+}**/
