--- a/src/assets/css/views/search.scss
+++ b/src/assets/css/views/search.scss
@@ -1,8 +1,5 @@
 @import "../variables";
 
-body {
-  overflow: hidden;
-}
 .search-view {
   margin-top: -10px;
   display: block;
@@ -38,69 +35,83 @@ body {
     font-size: 24px;
   }
 }
-.map {
+.map.search-container-map  {
   margin-top: 6px;
-  position: relative!important;
-  height: 100vh!important;
-  width: 100vw!important;
+  position: relative !important;
+  height: 78vh !important;
+  width: 100vw !important;
   overflow: hidden;
-}
-.mapboxgl-map {
-  position: absolute;
-  .mapboxgl-canvas-container {
+  .map-container {
+    width: 100vw!important;
+    height: 100vh!important;
+  }
+  .mapboxgl-map {
     position: absolute;
-    top:0;
-    left: 0;
-    right: 0;
-    bottom:0;
-    canvas {
+
+    .mapboxgl-canvas-container {
       position: absolute;
-      height: 100vh!important;
-    }
-    .mapboxgl-marker {
-      position: absolute!important;
-      stroke : $purple-color;
-      width: 10px;
-      height: 10px;
-      border-radius: 50%;
-      background: $purple-color!important;
-      svg {
-        display: none;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+
+      canvas {
+        position: absolute;
+        height: 100vh !important;
       }
-      g {
-        fill: $purple-color;
-      }
-    }
-  }
-  .mapboxgl-ctrl-bottom-right {
-    display: none;
-  }
-  .mapboxgl-popup {
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    background: white;
-    border-radius: 15px;
-    padding: 10px;
-    color:black;
-    font-weight: bold;
-    cursor: pointer;
-    font-size: 12px;
-    transition: background-color 0.2s ease-in-out;
-    &:hover {
-      color:white;
-      background: $purple-color;
-      .mapboxgl-popup-close-button {
-      color: white;
-        background: $purple-color;
+
+      .mapboxgl-marker {
+        position: absolute !important;
+        stroke: $purple-color;
+        width: 10px;
+        height: 10px;
+        border-radius: 50%;
+        background: $purple-color !important;
+
+        svg {
+          display: none;
+        }
+
+        g {
+          fill: $purple-color;
+        }
       }
     }
-    .mapboxgl-popup-close-button {
-      border: none;
-      transition: background-color 0.2s ease-in-out;
+
+    .mapboxgl-ctrl-bottom-right {
+      display: none;
+    }
+
+    .mapboxgl-popup {
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
       background: white;
-      margin-top: -2px;
-      float: right;
+      border-radius: 15px;
+      padding: 10px;
+      color: black;
       font-weight: bold;
-      color:$purple-color;
+      cursor: pointer;
+      font-size: 12px;
+      transition: background-color 0.2s ease-in-out;
+
+      &:hover {
+        color: white;
+        background: $purple-color;
+
+        .mapboxgl-popup-close-button {
+          color: white;
+          background: $purple-color;
+        }
+      }
+
+      .mapboxgl-popup-close-button {
+        border: none;
+        transition: background-color 0.2s ease-in-out;
+        background: white;
+        margin-top: -2px;
+        float: right;
+        font-weight: bold;
+        color: $purple-color;
+      }
     }
   }
 }
