--- a/src/assets/css/components/chatMessage.scss
+++ b/src/assets/css/components/chatMessage.scss
@@ -20,6 +20,10 @@
     max-width: 50%;
     width: auto;
     position: relative;
+    .image-message {
+      max-width: 100%;
+      max-height: 100%;
+    }
     .time {
       position: absolute;
       bottom:10px;
