--- a/src/assets/css/views/home/home.scss
+++ b/src/assets/css/views/home/home.scss
@@ -1,7 +1,4 @@
-@import '../variables';
-.home {
-  margin-top: 30px ;
-}
+@import '../../variables';
 .category-preview-container{
   display: flex;
   flex-wrap: nowrap;
@@ -34,17 +31,8 @@
   margin-block-end: 0em;
 }
 
-.section-title-home{
+.category-title-home{
   font-family: $font-montserrat;
   font-size: 20px;
   font-weight: 600;
-  margin-block-start: 0.5em;
-  margin-block-end: 0.3em;
-}
-
-.ads-container {
-  display: flex;
-  flex-wrap: nowrap;
-  overflow: auto;
-  height: 180px;
 }
