--- a/src/assets/css/views/loading/index.scss
+++ b/src/assets/css/views/loading/index.scss
@@ -9,3 +9,15 @@
     width: 100px;
   }
 }
+
+.small-loading {
+  width: 50px;
+  height: 50px;
+  display: flex;
+  flex-flow: row;
+  align-items: center;
+  justify-content: center;
+  img {
+    width: 50px;
+  }
+}
