[42] - modal if no tokens

--- a/src/assets/css/components/appointmentBox.scss
+++ b/src/assets/css/components/appointmentBox.scss
@@ -16,6 +16,7 @@
     justify-content: space-between;
     .ad-title {
       font-weight: bold;
+      font-size: 18px;
     }
     .appointment-date {
       display: flex;
