--- a/src/assets/css/components/smallAd.scss
+++ b/src/assets/css/components/smallAd.scss
@@ -1,10 +1,10 @@
 @import "../variables";
 
 .small-ad {
-  min-width: 150px;
-  min-height: 150px;
-  max-width: 150px;
-  max-height: 150px;
+  min-width: 200px;
+  min-height: 200px;
+  max-width: 200px;
+  max-height: 200px;
   display: flex;
   flex-flow: column;
   margin-right: 15px;
@@ -13,13 +13,13 @@
   border-radius: 15px;
   .ad-preview {
      width: 100%;
-      height: 80px;
+      height: 100px;
   }
   .ad-data {
-    padding: 10px;
-    padding-top: 0;
+    padding: 15px;
+    padding-top: 10px;
     width: 100%;
-    height: 70px;
+    height: 100px;
     display: flex;
     flex-flow: column;
     justify-content: space-between;
