--- a/src/assets/css/views/home.scss
+++ b/src/assets/css/views/home.scss
@@ -6,6 +6,7 @@
   display: flex;
   flex-wrap: nowrap;
   overflow: auto;
+  margin-bottom: 20px;
 }
 .category-preview{
   display: flex;
@@ -14,17 +15,21 @@
   font-family: $font-montserrat;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
   margin: 5px;
-  height: 125px;
+  height: 200px;
+  width: 200px;
 }
 .category-preview-img{
-  height: 75px;
+  height: 125px;
+  width: 100%!important;
+  border-radius:  15px 15px 0 0!important;
 }
 
 .category-preview-name-container{
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 60px;
+  flex:1;
+  font-weight: bold;
 }
 
 .category-preview-name{
@@ -46,5 +51,6 @@
   display: flex;
   flex-wrap: nowrap;
   overflow: auto;
-  height: 180px;
+  padding-bottom: 15px;
+  margin-bottom: 20px;
 }
