--- a/src/assets/css/views/search.scss
+++ b/src/assets/css/views/search.scss
@@ -3,6 +3,13 @@
 .search-view {
   margin-top: -10px;
   display: block;
+  &.show.loading {
+    display: flex;
+    flex-flow: row;
+    align-items: center;
+    justify-content: center;
+    max-height: 80vh;
+  }
   &.hide {
     display: none;
   }
