--- a/src/assets/css/views/profile/Profile.scss
+++ b/src/assets/css/views/profile/Profile.scss
@@ -1,14 +1,24 @@
 @import '../../variables';
+.base-layout {
+  header {
+    box-shadow: none!important;
+  }
+}
 .HeaderProfile{
   background-color: $purple-color;
   color: #fff;
   padding: 40px 15px 20px;
   font-family: $font-montserrat;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 20px;
+  border-radius: 15px;
   width: 100%;
   position: absolute;
   top: -20px;
+  padding-top: 70px;
+  * {
+    color:white;
+  }
+
 }
 
 .HeaderColumns {
@@ -27,6 +37,9 @@
   align-items: center;
   font-size: 12px;
   font-family: $font-muli;
+  div {
+    margin-bottom: 10px;
+  }
 }
 
 .ImgHeader {
@@ -44,8 +57,15 @@
 .img-profile {
   border-radius: 50%;
   background-color: $gold-color;
-  width: 70px;
-  height: 70px;
+  width: 90px;
+  height: 90px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  .profile-image {
+    width: 86px;
+    height: 86px;
+  }
 }
 
 .profile-image-container{
@@ -67,7 +87,7 @@
 
 .ButtonUser {
   color: $purple-color;
-  margin: 250px 0px 15px 5px;
+  margin: 210px 0px 15px 5px;
   font-size: 16px;
   font-family: $font-montserrat;
   font-weight: 600;
