--- a/src/assets/css/views/layouts/baseLayout.scss
+++ b/src/assets/css/views/layouts/baseLayout.scss
@@ -20,7 +20,8 @@
     width: 100vw;
     height: 50px;
     top:0;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    //box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: none;
     padding: 0 20px;
     .open-menu {
       width: 25px;
