--- a/src/assets/css/views/profile/Profile.scss
+++ b/src/assets/css/views/profile/Profile.scss
@@ -1,9 +1,5 @@
 @import '../../variables';
-.base-layout {
-  header {
-    box-shadow: none!important;
-  }
-}
+
 .HeaderProfile{
   background-color: $purple-color;
   color: #fff;
@@ -28,7 +24,8 @@
 }
 
 .SecondLevel {
-  margin: 25px 10px ;
+  margin: 25px 10px;
+  padding: 30px 0;
 }
 
 .CenterColumns {
@@ -62,6 +59,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  position: absolute;
+  left:50%;
+  transform: translateX(-50%);
   .profile-image {
     width: 86px;
     height: 86px;
@@ -87,7 +87,7 @@
 
 .ButtonUser {
   color: $purple-color;
-  margin: 210px 0px 15px 5px;
+  margin: 230px 0px 15px 5px;
   font-size: 16px;
   font-family: $font-montserrat;
   font-weight: 600;
@@ -158,7 +158,9 @@
 .profile-image{
 display:flex;
 }
-
+.button-bck-purple {
+  cursor: pointer;
+}
 .not-info {
   margin-left: 15px;
 }
