--- a/src/assets/css/views/search.scss
+++ b/src/assets/css/views/search.scss
@@ -101,7 +101,9 @@
       transition: background-color 0.2s ease-in-out;
 
       &:hover {
-        color: white;
+        * {
+          color: white ;
+        }
         background: $purple-color;
 
         .mapboxgl-popup-close-button {
