--- a/src/assets/css/views/profile/Notification.scss
+++ b/src/assets/css/views/profile/Notification.scss
@@ -1,7 +1,7 @@
 .notification {
   display: flex;
   align-items: center;
-  border: 1px solid grey; 
+  border: 0.5px solid grey; 
   .notification-img {
     width: 40px;
     height: 40px;
@@ -29,4 +29,7 @@
 }
 .notifications-container {
   margin-top: 40px;
+}
+.notification-readed {
+  color: #7F7F7F;
 }
