--- a/src/assets/css/views/profile/Notification.scss
+++ b/src/assets/css/views/profile/Notification.scss
@@ -1,7 +1,7 @@
 .notification {
   display: flex;
   align-items: center;
-  border: 0.5px solid grey; 
+  border: 0.5px solid #ececec; 
   .notification-img {
     width: 40px;
     height: 40px;
@@ -30,6 +30,6 @@
 .notifications-container {
   margin-top: 40px;
 }
-.notification-readed {
+.notification-text-container.notification-readed .notification-title {
   color: #7F7F7F;
 }
