--- a/src/assets/css/components/searchBarWithFilters.scss
+++ b/src/assets/css/components/searchBarWithFilters.scss
@@ -4,6 +4,7 @@
   border-bottom: 1px solid #C4C4C4;
   padding: 10px 20px;
   display: flex;
+  max-width: 100vw;
   flex-flow: row nowrap;
   align-items: center;
   background: white;
