--- a/src/assets/css/components/headerWithTitle.scss
+++ b/src/assets/css/components/headerWithTitle.scss
@@ -1,4 +1,9 @@
 @import "../variables";
+.header-with-title {
+  position: fixed;
+  top:0;
+  width: 100vw;
+}
 header {
   padding:0 20px;
   color:white;
@@ -19,4 +24,8 @@ header {
     font-weight: normal;
     color:white;
   }
+}
+
+.separator {
+  margin-top: 85px;
 }
