--- a/src/assets/css/components/modal.scss
+++ b/src/assets/css/components/modal.scss
@@ -46,6 +46,11 @@
     width: 100%;
     padding: 10px 20px;
     border-radius: 0 0 5px 5px;
+    .loading {
+      width: 100%;
+      height: 250px;
+      margin-top: 20px;
+    }
   }
 }
 .backdrop {
