--- a/src/assets/css/components/searchBar.scss
+++ b/src/assets/css/components/searchBar.scss
@@ -7,6 +7,8 @@
   z-index: 100;
   align-items: center;
   justify-content: space-between;
+  position: fixed;
+  top:50px;
   img {
     width: 20px;
      margin-right: 20px;
