--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -206,3 +206,15 @@ select {
 
   }
 }
+
+.mapboxgl-marker {
+  position: absolute !important;
+  stroke: #472889;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  background: #472889 !important;
+  svg {
+    display: none;
+  }
+}
