--- a/src/assets/css/views/ad/view.scss
+++ b/src/assets/css/views/ad/view.scss
@@ -231,12 +231,17 @@
         }
 
         .mapboxgl-marker {
-          stroke: $purple-color;
-
-          g {
-            fill: $purple-color;
+          position: absolute !important;
+          stroke: #472889;
+          width: 15px;
+          height: 15px;
+          border-radius: 50%;
+          background: #472889 !important;
+          svg {
+            display: none;
           }
         }
+
       }
 
       .mapboxgl-ctrl-bottom-right {
