--- a/src/assets/css/views/profile/Profile.scss
+++ b/src/assets/css/views/profile/Profile.scss
@@ -109,13 +109,17 @@
   display: flex;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
-  margin: 0px 10px;
+  margin: 15px 0px;
   width: 87.5%
 }
-
-.review-header{
+.review-image {
   display: flex;
-  justify-content: space-between;
+  align-items: center;
+  margin-left: 15px;
+}
+
+.review-container {
+  margin-left: 20px
 }
 
 .review-star {
@@ -123,17 +127,9 @@
   height: 15px;
 }
 
-.review-title{
-  font-family: $font-montserrat;
-  font-weight: 600;
-  margin-block-start: 0.2em;
-
-}
-
 .review-content {
-  border: 1px solid #E5E5E5;
   border-radius: 15px;
-  padding: 10px;
+  margin-block-end: 0.2em;
 }
 
 .header-edit {
@@ -166,4 +162,16 @@ display:flex;
 }
 .not-info {
   margin-left: 15px;
+}
+
+.stars{
+  font-size: 20px;
+  display: flex;
+  direction: rtl;
+  justify-content: flex-end;
+  margin-bottom: 15px;
+  color: #a3a3a3;
+  .stars-active{
+  color:#ffcd05;
+}
 }
