--- a/src/assets/css/views/profile/Profile.scss
+++ b/src/assets/css/views/profile/Profile.scss
@@ -14,7 +14,12 @@
   * {
     color:white;
   }
+}
 
+.container-edit-form {
+  width: 100%;
+  padding:0px 20px;
+  box-sizing: border-box;
 }
 
 .header-columns {
@@ -110,7 +115,7 @@
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
   margin: 15px 0px;
-  width: 87.5%
+  width: 100%;
 }
 .review-image {
   display: flex;
@@ -172,6 +177,6 @@ display:flex;
   margin-bottom: 15px;
   color: #a3a3a3;
   .stars-active{
-  color:#ffcd05;
-}
+    color:#ffcd05;
+  }
 }
