[87] - logo and favicon

--- a/src/assets/css/views/layouts/baseLayout.scss
+++ b/src/assets/css/views/layouts/baseLayout.scss
@@ -27,6 +27,10 @@
       width: 25px;
       cursor: pointer;
     }
+    .logo {
+      width: 70px;
+      margin-top: -8px;
+    }
   }
   .sidebar {
     position: fixed;
