--- a/src/assets/css/components/smallAd.scss
+++ b/src/assets/css/components/smallAd.scss
@@ -45,7 +45,8 @@
         font-size: 12px;
         padding: 4px 8px;
         border-radius: 15px;
-        img {
+        .img-coin{
+          width: 12px;
           margin-left: 5px;
         }
       }
