--- a/src/assets/css/components/reviewModal.scss
+++ b/src/assets/css/components/reviewModal.scss
@@ -10,6 +10,7 @@
     margin: 15px 0;
     margin-bottom: 20px;
     font-size: 36px;
+    flex-direction: row-reverse;
 
     .star {
       color: #C4C4C4;
