--- a/src/assets/css/components/videoCall.scss
+++ b/src/assets/css/components/videoCall.scss
@@ -27,7 +27,8 @@
     height: 100vh;
     video {
       width: 100%;
-      height: 100%;
+      object-fit: fill;
+      height: 100vh;
     }
   }
   .handUp-call {
