[dev] - video call

--- a/src/assets/css/components/videoCall.scss
+++ b/src/assets/css/components/videoCall.scss
@@ -15,9 +15,27 @@
     position: absolute;
     bottom:0;
     right: 0px;
-    video {
-      height: 100%;
+    background: black;
+    border-radius: 15px;
+    .video-unavailable {
+      width: 70%;
     }
+    video {
+      border-radius: 15px;
+      height: 100%;
+      width: 100%;
+      object-fit: fill;
+    }
+  }
+  .hidden {
+    visibility: hidden;
+  }
+  .video-unavailable {
+    position: absolute;
+    top: 50%;
+    left:50%;
+    transform: translate(-50%, -50%);
+    z-index: 0;
   }
   #partnerVideo {
     position: absolute;
@@ -29,6 +47,15 @@
       width: 100%;
       object-fit: fill;
       height: 100vh;
+    }
+  }
+  .actions {
+    position: absolute;
+    left: 15px;
+    bottom: 15px;
+    img {
+      width: 40px;
+      margin-right: 25px;
     }
   }
   .handUp-call {
